[gd_scene load_steps=5 format=2]

[ext_resource path="res://LandMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/Font/PublicPixel-z84yD.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="LandMenu" type="Control"]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
theme = SubResource( 2 )
script = ExtResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -182.0
margin_top = -82.0
margin_right = 182.0
margin_bottom = 82.0

[node name="Ships" type="Button" parent="Menu"]
margin_right = 364.0
margin_bottom = 38.0
focus_mode = 0
text = "Ships"

[node name="Commodities" type="Button" parent="Menu"]
margin_top = 42.0
margin_right = 364.0
margin_bottom = 80.0
focus_mode = 0
text = "Commodities"

[node name="Hotel" type="Button" parent="Menu"]
margin_top = 84.0
margin_right = 364.0
margin_bottom = 122.0
focus_mode = 0
text = "Hotel"

[node name="Launch" type="Button" parent="Menu"]
margin_top = 126.0
margin_right = 364.0
margin_bottom = 164.0
focus_mode = 0
text = "Launch"

[node name="Ships" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="BackFromShips" type="Button" parent="Ships"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -70.0
margin_top = -38.0
margin_right = 70.0
focus_mode = 0
text = "Back"

[node name="Commodities" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="BackFromCommodities" type="Button" parent="Commodities"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -70.0
margin_top = -38.0
margin_right = 70.0
focus_mode = 0
text = "Back"

[node name="Hotel" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="VBoxContainer" type="VBoxContainer" parent="Hotel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -93.0
margin_right = 144.0
margin_bottom = 93.0

[node name="Label" type="Label" parent="Hotel/VBoxContainer"]
margin_right = 288.0
margin_bottom = 102.0
text = "Hotel
HONK SHOO
HONK SHOO"
align = 1

[node name="Rest" type="Button" parent="Hotel/VBoxContainer"]
margin_top = 106.0
margin_right = 288.0
margin_bottom = 144.0
focus_mode = 0
text = "Rest"

[node name="BackFromHotel" type="Button" parent="Hotel/VBoxContainer"]
margin_top = 148.0
margin_right = 288.0
margin_bottom = 186.0
focus_mode = 0
text = "Back"

[connection signal="pressed" from="Menu/Ships" to="." method="_on_Ships_pressed"]
[connection signal="pressed" from="Menu/Commodities" to="." method="_on_Commodities_pressed"]
[connection signal="pressed" from="Menu/Hotel" to="." method="_on_Hotel_pressed"]
[connection signal="pressed" from="Menu/Launch" to="." method="_on_Launch_pressed"]
[connection signal="pressed" from="Ships/BackFromShips" to="." method="_on_BackFromShips_pressed"]
[connection signal="pressed" from="Commodities/BackFromCommodities" to="." method="_on_BackFromCommodities_pressed"]
[connection signal="pressed" from="Hotel/VBoxContainer/Rest" to="." method="_on_Rest_pressed"]
[connection signal="pressed" from="Hotel/VBoxContainer/BackFromHotel" to="." method="_on_BackFromHotel_pressed"]
